--- a/dockerizeit/master/jenkins.properties
+++ b/dockerizeit/master/jenkins.properties
@@ -18,7 +18,7 @@ credentials {
 
 artifactory {
   server1 {
-    enabled = true
+    enabled = false
     deployerCredentialsId = "${credentials.artifactory.credentialsId}"
     resolverCredentialsId = "${credentials.artifactory.credentialsId}"
     overridingCredentials = false
