--- a/dockerizeit/master/jenkins.properties
+++ b/dockerizeit/master/jenkins.properties
@@ -1,8 +1,8 @@
 credentials {
   base {
     type = "ssh"
-    userId = "jenkins"
-    credentialsId = "jenkins"
+    userId = "Andrey9kin"
+    credentialsId = "Andrey9kin"
     description = ""
     passphrase = ""
     path = "/var/jenkins_home/.ssh/id_rsa"
@@ -44,7 +44,7 @@ global {
   }
   variables {
     default_credentials = "${credentials.base.credentialsId}"
-    default_repo = "git@github.com:Praqma/JenkinsAsCodeReference.git"
+    default_repo = "git@github.com:praqma-training/code-academy-phlow-jenkins.git"
     default_branch = "master"
     utility_slave = "utility-slave"
     master_image_name = "${images.masterImageName}"
