--- a/dockerizeit/master/jenkins.properties
+++ b/dockerizeit/master/jenkins.properties
@@ -39,8 +39,8 @@ global {
   scmQuietPeriod = 3
   scmCheckoutRetryCount = 3
   git {
-    name = "Jenkins Jenkinsson"
-    email = "no-reply@yourcompany.com"
+    name = "Andrey Devyatkin"
+    email = "andrey.a.devyatkin@gmail.com"
   }
   variables {
     default_credentials = "${credentials.base.credentialsId}"
@@ -60,6 +60,16 @@ seedjobs {
     credentials = "${credentials.base.credentialsId}"
     path = "jobdsl-gradle/src/jobs/groovy/*.groovy"
     classpath = "jobdsl-gradle/src/main/groovy"
+    parameters {
+    }
+  }
+  jenkins {
+    name = "code-academy-phlow-demo-seedjob"
+    repo = "git@github.com:praqma-training/code-academy-phlow-demo.git"
+    branch = "${global.variables.default_branch}"
+    credentials = "${credentials.base.credentialsId}"
+    path = "jenkins/*.groovy"
+    classpath = ""
     parameters {
     }
   }
