enable own database in the correct way
Signed-off-by: Andrey Devyatkin <andrey.a.devyatkin@gmail.com>

--- a/dockerizeit/master/jenkins.properties
+++ b/dockerizeit/master/jenkins.properties
@@ -63,7 +63,7 @@ seedjobs {
     parameters {
     }
   }
-  jenkins {
+  phflow {
     name = "code-academy-phlow-demo-seedjob"
     repo = "git@github.com:praqma-training/code-academy-phlow-demo.git"
     branch = "${global.variables.default_branch}"
